# lilith-compose

./: .gitignore  README.md
agent-stack/: .env.example  docker-compose.yaml
agent-stack/searxng/: settings.yml
ai-stack/: .env.example  docker-compose.yml
ai-stack/fasttext-api/: Dockerfile  app.py  download_model.py  pyproject.toml
ai-stack/spacy-api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
ai-stack/spacy-api/app/: main.py
