[project]
name = "spacy-api"
version = "0.1.0"
description = "FastAPI + spaCy NER API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "spacy>=3.7.0,<4.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "mypy>=1.13.0"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "TCH", "PTH", "N", "W"]
ignore = ["E501", "B904"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
